# veto

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  README.md  Vagrantfile  deny.toml  sample.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: matcher.rs  matcher.toml  matcher.txt
debian/: veto.service
src/: handler.rs  lib.rs  main.rs  matcher.rs  notifier.rs  settings.rs
src/firewall/: ipset.rs  iptables.rs  mod.rs
src/storage/: memory.rs  mod.rs
