[package]
name = "veto"
version = "0.2.2"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
description = "A lightweight, log file based IP blocker with focus on simplicity and speed."
homepage = "https://github.com/dnaka91/veto"
repository = "https://github.com/dnaka91/veto"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
license-file = ["LICENSE", "0"]
depends = "$auto, ipset"
assets = [
    ["target/release/veto", "/usr/bin/veto", "755"],
    ["README.md", "/usr/share/doc/veto/README.md", "644"],
    ["sample.toml", "/etc/veto/config.toml.sample", "644"],
]

[dependencies]
ahash = "0.8.3"
aho-corasick = "1.0.1"
anyhow = "1.0.71"
basic-toml = "0.1.2"
bincode = "1.3.3"
clap = { version = "4.2.5", features = ["derive", "env"] }
ctrlc = { version = "3.2.5", features = ["termination"] }
dotenvy = "0.15.7"
flate2 = "1.0.26"
flume = { version = "0.10.14", default-features = false, features = ["select"] }
humantime = "2.1.0"
indexmap = { version = "1.9.3", features = ["serde-1"] }
ipnetwork = "0.20.0"
itertools = "0.10.5"
log = "0.4.17"
notify = "5.1.0"
parking_lot = "0.12.1"
phf = { version = "0.11.1", features = ["macros"] }
pretty_env_logger = "0.4.0"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
time = { version = "0.3.20", features = ["macros", "parsing", "serde-well-known"] }
which = "4.4.0"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }

[profile.release]
lto = true
strip = true

[[bench]]
name = "matcher"
harness = false
