[package]
name = "veto"
version = "0.2.2"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
description = "A lightweight, log file based IP blocker with focus on simplicity and speed."
homepage = "https://github.com/dnaka91/veto"
repository = "https://github.com/dnaka91/veto"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
license-file = ["LICENSE", "0"]
depends = "$auto, ipset"
assets = [
    ["target/release/veto", "/usr/bin/veto", "755"],
    ["README.md", "/usr/share/doc/veto/README.md", "644"],
    ["sample.toml", "/etc/veto/config.toml.sample", "644"],
]

[dependencies]
ahash = "0.8.10"
aho-corasick = "1.1.2"
anyhow = "1.0.80"
basic-toml = "0.1.8"
bincode = "1.3.3"
clap = { version = "4.5.1", features = ["derive", "env"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
dotenvy = "0.15.7"
flate2 = "1.0.28"
flume = { version = "0.11.0", default-features = false, features = ["select"] }
humantime = "2.1.0"
indexmap = { version = "2.2.3", features = ["serde"] }
ipnetwork = "0.20.0"
itertools = "0.12.1"
log = "0.4.20"
notify = "6.1.1"
parking_lot = "0.12.1"
phf = { version = "0.11.2", features = ["macros"] }
pretty_env_logger = "0.5.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.34", features = ["macros", "parsing", "serde-well-known"] }
which = "6.0.0"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }

[profile.release]
lto = true
strip = true

[[bench]]
name = "matcher"
harness = false
